@@ -12,8 +12,11 @@
         <module>ontimize-core-client</module>
         <module>ontimize-jee-hessian</module>
         <module>ontimize-jee-desktopclient</module>
-        <module>ontimize-jee-desktopclient-oauth</module>
+        <module>ontimize-jee-dms-desktopclient</module>
+<!--        <module>ontimize-jee-desktopclient-oauth</module>-->
         <module>ontimize-jee-server-hessian-api</module>
+        <module>ontimize-jee-callback-websocket</module>
+        <module>ontimize-jee-callback-cometd</module>
     </modules>
 
     <organization>
@@ -162,6 +165,11 @@
                     <source>11</source>
                     <target>11</target>
                     <encoding>Cp1252</encoding>
+			        <fork>true</fork>
+			        <compilerArgs>
+			            <arg>--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED</arg>
+			            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+			        </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -218,6 +226,11 @@
 			<dependency>
 				<groupId>com.ontimize.jee</groupId>
 				<artifactId>ontimize-jee-common</artifactId>
+				<version>${ontimize-jee.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ontimize.jee</groupId>
+				<artifactId>ontimize-jee-server</artifactId>
 				<version>${ontimize-jee.version}</version>
 			</dependency>
 			<dependency>
@@ -283,7 +296,6 @@
                 <version>${dynamicjasper.version}</version>
                 <scope>compile</scope>
                 <optional>true</optional>
-
             </dependency>
 
             <dependency>
